blpapi-sys/src/bindings.rs

extern "C" {
    pub fn blpapi_SchemaElementDefinition_setUserData(
        field: *mut blpapi_SchemaElementDefinition_t,
        userdata: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn blpapi_SchemaElementDefinition_userData(
        field: *const blpapi_SchemaElementDefinition_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_name(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> *mut blpapi_Name_t;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_description(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_status(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_datatype(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_isComplexType(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_isSimpleType(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_isEnumerationType(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_isComplex(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_isSimple(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_isEnumeration(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_numElementDefinitions(
        type_: *const blpapi_SchemaTypeDefinition_t,
    ) -> usize;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_getElementDefinition(
        type_: *const blpapi_SchemaTypeDefinition_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
    ) -> *mut blpapi_SchemaElementDefinition_t;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_getElementDefinitionAt(
        type_: *const blpapi_SchemaTypeDefinition_t,
        index: usize,
    ) -> *mut blpapi_SchemaElementDefinition_t;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_print(
        element: *const blpapi_SchemaTypeDefinition_t,
        streamWriter: blpapi_StreamWriter_t,
        userStream: *mut ::std::os::raw::c_void,
        level: ::std::os::raw::c_int,
        spacesPerLevel: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_setUserData(
        element: *mut blpapi_SchemaTypeDefinition_t,
        userdata: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_userData(
        element: *const blpapi_SchemaTypeDefinition_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn blpapi_SchemaTypeDefinition_enumeration(
        element: *const blpapi_SchemaTypeDefinition_t,
    ) -> *mut blpapi_ConstantList_t;
}
extern "C" {
    pub fn blpapi_Element_name(element: *const blpapi_Element_t) -> *mut blpapi_Name_t;
}
extern "C" {
    pub fn blpapi_Element_nameString(
        element: *const blpapi_Element_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_Element_definition(
        element: *const blpapi_Element_t,
    ) -> *mut blpapi_SchemaElementDefinition_t;
}
extern "C" {
    pub fn blpapi_Element_datatype(element: *const blpapi_Element_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_isComplexType(element: *const blpapi_Element_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_isArray(element: *const blpapi_Element_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_isReadOnly(element: *const blpapi_Element_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_numValues(element: *const blpapi_Element_t) -> usize;
}
extern "C" {
    pub fn blpapi_Element_numElements(element: *const blpapi_Element_t) -> usize;
}
extern "C" {
    pub fn blpapi_Element_isNullValue(
        element: *const blpapi_Element_t,
        position: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_isNull(element: *const blpapi_Element_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_print(
        element: *const blpapi_Element_t,
        streamWriter: blpapi_StreamWriter_t,
        stream: *mut ::std::os::raw::c_void,
        level: ::std::os::raw::c_int,
        spacesPerLevel: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getElementAt(
        element: *const blpapi_Element_t,
        result: *mut *mut blpapi_Element_t,
        position: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getElement(
        element: *const blpapi_Element_t,
        result: *mut *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_hasElement(
        element: *const blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_hasElementEx(
        element: *const blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        excludeNullElements: ::std::os::raw::c_int,
        reserved: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsBool(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Bool_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsChar(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Char_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsInt32(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Int32_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsInt64(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Int64_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsFloat32(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Float32_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsFloat64(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Float64_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsString(
        element: *const blpapi_Element_t,
        buffer: *mut *const ::std::os::raw::c_char,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsDatetime(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_Datetime_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsHighPrecisionDatetime(
        element: *const blpapi_Element_t,
        buffer: *mut blpapi_HighPrecisionDatetime_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsElement(
        element: *const blpapi_Element_t,
        buffer: *mut *mut blpapi_Element_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getValueAsName(
        element: *const blpapi_Element_t,
        buffer: *mut *mut blpapi_Name_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_getChoice(
        element: *const blpapi_Element_t,
        result: *mut *mut blpapi_Element_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueBool(
        element: *mut blpapi_Element_t,
        value: blpapi_Bool_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueChar(
        element: *mut blpapi_Element_t,
        value: blpapi_Char_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueInt32(
        element: *mut blpapi_Element_t,
        value: blpapi_Int32_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueInt64(
        element: *mut blpapi_Element_t,
        value: blpapi_Int64_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueFloat32(
        element: *mut blpapi_Element_t,
        value: blpapi_Float32_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueFloat64(
        element: *mut blpapi_Element_t,
        value: blpapi_Float64_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueString(
        element: *mut blpapi_Element_t,
        value: *const ::std::os::raw::c_char,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueDatetime(
        element: *mut blpapi_Element_t,
        value: *const blpapi_Datetime_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueHighPrecisionDatetime(
        element: *mut blpapi_Element_t,
        value: *const blpapi_HighPrecisionDatetime_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueFromElement(
        element: *mut blpapi_Element_t,
        value: *mut blpapi_Element_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setValueFromName(
        element: *mut blpapi_Element_t,
        value: *const blpapi_Name_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setElementBool(
        element: *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        value: blpapi_Bool_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setElementChar(
        element: *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        value: blpapi_Char_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setElementInt32(
        element: *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        value: blpapi_Int32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setElementInt64(
        element: *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        value: blpapi_Int64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setElementFloat32(
        element: *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        value: blpapi_Float32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Element_setElementFloat64(
        element: *mut blpapi_Element_t,
        nameString: *const ::std::os::raw::c_char,
        name: *const blpapi_Name_t,
        value: blpapi_Float64_t,
    ) -> ::std::os::raw::c_int;
}
